cambio de url del perfil

--- a/social/templates/social/profile.html
+++ b/social/templates/social/profile.html
@@ -69,7 +69,7 @@
 						  <a type="button" class="btn btn-outline-dark" href="https://www.linkedin.com/sharing/share-offsite/?url=https://leyendo.online/leyendo/{{ user.profile.user }}" target="_blank">
 						  	Linkedin
 						  </a>
-						  <p id="copy_data" style="display: none;">www.leyendo.online/leyendo/{{ user.profile.user }}</p>
+						  <p id="copy_data" style="display: none;">mi.leyendo.online/leyendo/{{ user.profile.user }}</p>
 						  <button type="button" class="btn btn-outline-dark" onclick="copiarAlPortapapeles('copy_data')" id="copy_url">
 						  	<span class="material-icons">content_copy</span>
 						  </button>
