corrigiendo errores en vista

--- a/social/templates/social/layout.html
+++ b/social/templates/social/layout.html
@@ -107,7 +107,7 @@
   <!-- Copyright -->
   <div class="text-center">
     © 2021 Copyright:
-    <a href="https://leyendo.online/" class="text-white">Leyendo.online</a>
+    <a href="https://leyendo.online/" class="text-white">Leyendo</a>
   </div>
   <!-- Copyright -->
 </footer>
