--- a/social/templates/social/link.html
+++ b/social/templates/social/link.html
@@ -80,7 +80,7 @@
   <!-- Copyright -->
   <div class="text-center {{ usuarios.colorFondo }}">
     © 2021 Copyright:
-    <a href="https://leyendo.online/" class="text-white">Leyendo.online</a>
+    <a href="https://leyendo.online/" class="text-white">Leyendo/a>
   </div>
   <!-- Copyright -->
   {% endfor %}
