--- a/social/templates/social/login.html
+++ b/social/templates/social/login.html
@@ -6,7 +6,7 @@
 	{% csrf_token %}
 	{{ form.as_p }}
 	<div class="d-grid gap-2">
-		<button type="submit"  class="btn btn-outline-dark">Login</button>
+		<button type="submit"  class="btn btn-outline-dark">Iniciar sesion</button>
 	</div>
 </form>
 
