Se agrego funcionalidad de subir pdf

--- a/social/templates/social/index.html
+++ b/social/templates/social/index.html
@@ -29,7 +29,7 @@
 				<a type="button" href="{% url 'login' %}" class="btn btn-dark">Iniciar Sesion</a>
 			</div>
 			<div class="col-12 pt-5">
-				<img src="../../static/celu.png" class="img-fluid img-responsive">
+				<img src="../../static/celu2.png" class="img-fluid img-responsive">
 			</div>
 			</center>
 		</div>
