--- a/social/templates/social/post.html
+++ b/social/templates/social/post.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<form method="post">
+<form method="post" enctype="multipart/form-data"> 
 	{% csrf_token %}
 	{{ form.as_p }}
 	<div class="d-grid gap-2">
