se agrego el mi. a los link de perfil

--- a/social/templates/social/profile.html
+++ b/social/templates/social/profile.html
@@ -55,18 +55,18 @@
 		</div>
 		<h5>URL Activa:</h5>
 		<div class="input-group input-group-sm mb-3">
-		  <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm"  disabled="true" value="https://leyendo.online/leyendo/{{ user.profile.user }}">
+		  <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm"  disabled="true" value="https://mi.leyendo.online/leyendo/{{ user.profile.user }}">
 		</div>
 		<h5>Compartir:</h5>
 			<div class="input-group input-group-sm mb-3">
 						<div class="btn-group" role="group" aria-label="Basic outlined example">
-						  <a type="button" class="btn btn-outline-dark" href="https://api.whatsapp.com/send?text=https://leyendo.online/leyendo/{{ user.profile.user }}" target="_blank"> 
+						  <a type="button" class="btn btn-outline-dark" href="https://api.whatsapp.com/send?text=https://mi.leyendo.online/leyendo/{{ user.profile.user }}" target="_blank"> 
 						  	<span class="material-icons">whatsapp</span>
 						  </a>
-						  <a type="button" class="btn btn-outline-dark" href="https://www.facebook.com/sharer/sharer.php?u=https://leyendo.online/leyendo/{{ user.profile.user }}" target="_blank">
+						  <a type="button" class="btn btn-outline-dark" href="https://www.facebook.com/sharer/sharer.php?u=https://mi.leyendo.online/leyendo/{{ user.profile.user }}" target="_blank">
 						  	<span class="material-icons">facebook</span>
 						  </a>
-						  <a type="button" class="btn btn-outline-dark" href="https://www.linkedin.com/sharing/share-offsite/?url=https://leyendo.online/leyendo/{{ user.profile.user }}" target="_blank">
+						  <a type="button" class="btn btn-outline-dark" href="https://www.linkedin.com/sharing/share-offsite/?url=https://mi.leyendo.online/leyendo/{{ user.profile.user }}" target="_blank">
 						  	Linkedin
 						  </a>
 						  <p id="copy_data" style="display: none;">mi.leyendo.online/leyendo/{{ user.profile.user }}</p>
