--- a/social/templates/social/link.html
+++ b/social/templates/social/link.html
@@ -33,7 +33,7 @@
 		</div>
 		<div class="col-12" >
 			{% for usuarios in usuario %}
-			<center><h4>@{{ user }}</h4></center>
+			<center><h4>{{ user }}</h4></center>
 			{% endfor %}
 		</div>
 		<div class="col-md-8 offset-md-2 col-sm-12 d-grid gap-2">
