--- a/social/templates/social/layout.html
+++ b/social/templates/social/layout.html
@@ -68,7 +68,7 @@
 		<nav class="navbar">
 			{% if request.user.is_authenticated %}
 			<a class="feed" href="{% url 'feed' %}">Mis botones</a>
-			<a class="profile" href="{% url 'editprofile' request.user.username %}">Vista Previa</a>
+			<a class="profile" href="https://mi.leyendo.online/leyendo/{{request.user.username}}">Vista Previa</a>
 			<a class="profile" href="{% url 'editprofile' request.user.username %}">Mi Perfil</a>
 			<a class="new" href="{% url 'post' %}"><span title="Agregar URl" class="material-icons">add</span></a>
 			{% endif %}
