--- a/social/static/style.css
+++ b/social/static/style.css
@@ -236,6 +236,14 @@ time {
   margin-top: -40px;
   margin-bottom: 10px;
 }
+.circle2{
+	height: 140px;
+  width: 140px;
+  /*margin-right: 10px;*/
+  border-radius: 50%;
+  margin-top: -60px !important;
+  margin-bottom: 10px;
+}
 
 /* Followers / Following / Post */
 .follow{
