--- a/social/templates/social/register.html
+++ b/social/templates/social/register.html
@@ -28,8 +28,13 @@
 </script>
 
 {% if request.user.is_authenticated %}
+<div class="row">
+	<div class="col-12">
+		<img src="../../../media/{{ user.profile.portada}}" class="img-fluid img-responsive" style="height: 200px; width: inherit;">
+	</div>
+</div>
 <div class="profile">
-	<img src="{{ user.profile.image.url }}">
+	<img class="circle2" src="{{ user.profile.image.url }}">
 	<h2>{{ user.username }}</h2>	
 </div>
 
