--- a/static/style.css
+++ b/static/style.css
@@ -29,7 +29,7 @@ body{
 }
 .amarillo{
 	background: #F4D03F !important;
-	color: white; !important;
+	color: white !important;
 }
 .naranja{
 	background: #F39C12 !important;
@@ -236,6 +236,14 @@ time {
   margin-top: -40px;
   margin-bottom: 10px;
 }
+.circle2{
+	height: 140px;
+  width: 140px;
+  /*margin-right: 10px;*/
+  border-radius: 50%;
+  margin-top: -60px !important;
+  margin-bottom: 10px;
+}
 
 /* Followers / Following / Post */
 .follow{
@@ -354,3 +362,70 @@ img.profile{
   }
 
 }
+
+.btn-flotante {
+	font-size: 16px; /* Cambiar el tamaño de la tipografia */
+	text-transform: uppercase; /* Texto en mayusculas */
+	font-weight: bold; /* Fuente en negrita o bold */
+	color: #ffffff; /* Color del texto */
+	border-radius: 5px; /* Borde del boton */
+	letter-spacing: 2px; /* Espacio entre letras */
+	background-color: #E91E63; /* Color de fondo */
+	padding: 18px 30px; /* Relleno del boton */
+	position: fixed;
+	bottom: 40px;
+	right: 40px;
+	transition: all 300ms ease 0ms;
+	box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+	z-index: 99;
+	}
+	.btn-flotante:hover {
+	background-color: #2c2fa5; /* Color de fondo al pasar el cursor */
+	box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.3);
+	transform: translateY(-7px);
+	}
+	@media only screen and (max-width: 600px) {
+	.btn-flotante {
+	font-size: 14px;
+	padding: 12px 20px;
+	bottom: 20px;
+	right: 20px;
+	}
+	}
+
+	.tilt {
+		transform: rotate(3deg);
+		-moz-transform: rotate(3deg);
+		-webkit-transform: rotate(3deg);
+	  }
+	
+	
+	  .column {
+		width: 170px;
+		float: left;
+		padding-bottom: 100px;
+	  }
+	  .portlet {
+		margin: 0 1em 1em 0;
+		padding: 0.3em;
+	  }
+	  .portlet-header {
+		padding: 0.2em 0.3em;
+		margin-bottom: 0.5em;
+		position: relative;
+	  }
+	  .portlet-toggle {
+		position: absolute;
+		top: 50%;
+		right: 0;
+		margin-top: -8px;
+	  }
+	  .portlet-content {
+		padding: 0.4em;
+	  }
+	  .portlet-placeholder {
+		border: 1px dotted black;
+		margin: 0 1em 1em 0;
+		height: 50px;
+	  }
+	
