--- a/social/templates/social/register.html
+++ b/social/templates/social/register.html
@@ -29,14 +29,16 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 <script>
     $(document).ready(function(){
-        if ($('#id_modo').value === 'Business') {
+        let select = document.getElementById("id_modo");
+        let selectedOption = select.options[select.selectedIndex];
+        if (selectedOption.value === 'Business') {
             $("#id_imageB").show();
             $("#id_portadaB").show();
             $("#id_imageS").hide();
             $("#id_portadaS").hide();
             $("#id_imageO").hide();
             $("#id_portadaO").hide();
-        } else if ($('#id_modo').value === 'Social') {
+        } else if (selectedOption.value === 'Social') {
             $("#id_imageB").hide();
             $("#id_portadaB").hide();
             $("#id_imageS").show();
@@ -82,11 +84,11 @@
 <div class="row">
 	<div class="col-12">
         {% if user.profile.modo == 'Business' %}
-		    <img src="../../../media/{{ user.profile.portadaB}}" class="img-fluid img-responsive" style="height: 200px; width: inherit;">
+		    <img src="{{ user.profile.portadaB.url}}" class="img-fluid img-responsive" style="height: 200px; width: inherit;">
         {% elif user.profile.modo == 'Social' %}
-            <img src="../../../media/{{ user.profile.portadaS}}" class="img-fluid img-responsive" style="height: 200px; width: inherit;">
+            <img src="{{ user.profile.portadaS.url}}" class="img-fluid img-responsive" style="height: 200px; width: inherit;">
         {% else %}
-            <img src="../../../media/{{ user.profile.portadaO}}" class="img-fluid img-responsive" style="height: 200px; width: inherit;">
+            <img src="{{ user.profile.portadaO.url}}" class="img-fluid img-responsive" style="height: 200px; width: inherit;">
         {% endif %}
 	</div>
 </div>
@@ -107,7 +109,6 @@
 <form class="form" method="post" enctype="multipart/form-data">
 	{% csrf_token %}
 	{{ form }}
-
 	<div class="d-grid gap-2">
 		<button type="submit"  class="btn btn-outline-dark">{{ boton }}</button>
 	</div>
