Agregando VFC para contacto iphone

--- a/social/templates/actions.html
+++ b/social/templates/actions.html
@@ -15,6 +15,7 @@
                 <a class="btn negro" href="{% url 'post' type='email' %}"><span class="material-icons">email</span><br>Email</a>
                 <a class="btn negro" href="{% url 'post' type='wallet' %}"><span class="material-icons">account_balance_wallet</span><br>Criptomonedas</a>
             </div>
+            <a href="../../media/vfc/jere.vcf" class="btn">Descargar</a>
         </div>
     </div>
 {% endblock %}
